--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,7 +23,7 @@ jobs:
         go-version: ${{ matrix.go-version }}
 
     - name: Build
-      run: go build -v ./src/acontroller
+      run: go build -v ./src/appscontroller
 
     - name: Test
       run: go test -v ./...
