readme.md added

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,40 +1,40 @@
-name: Test-Build-Publish
+# name: Test-Build-Publish
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+# on:
+#   push:
+#     branches: [ main ]
+#   pull_request:
+#     branches: [ main ]
 
-jobs:
+# jobs:
 
-  test:
-    strategy:
-      matrix:
-        go-version: [1.15]
-        platform: [ubuntu-latest]
+#   test:
+#     strategy:
+#       matrix:
+#         go-version: [1.15]
+#         platform: [ubuntu-latest]
     
-    runs-on: ${{ matrix.platform }}
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ matrix.go-version }}
+#     runs-on: ${{ matrix.platform }}
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Set up Go
+#       uses: actions/setup-go@v2
+#       with:
+#         go-version: ${{ matrix.go-version }}
 
-    - name: Build
-      run: go build -v ./src/appscontroller
+#     - name: Build
+#       run: go build -v ./src/appscontroller
 
-    - name: Test
-      run: go test -v ./...
+#     - name: Test
+#       run: go test -v ./...
 
-    - name: build-and-push
-      uses: mr-smithers-excellent/docker-build-push@v4
-      with:
-        image: hoangphanthai/appscontroller
-        registry: docker.io
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+#     - name: build-and-push
+#       uses: mr-smithers-excellent/docker-build-push@v4
+#       with:
+#         image: hoangphanthai/appscontroller
+#         registry: docker.io
+#         username: ${{ secrets.DOCKERHUB_USERNAME }}
+#         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
 
 
