yaml files added

--- a/crd/app1DbEnabled.yaml
+++ b/crd/app1DbEnabled.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: "default"
 spec:
   database:
-    enable: False
+    enable: True
     spec: 
       disksize: "1Gi"
       clustersize: 2
