--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,7 @@ pkg
 .vscode
 src/k8s.io
 .DS_Store
-src/appscontroller/.bash_profile
-src/appscontroller/.bashrc
-src/appscontroller/.profile
-src/appscontroller/.zshrc
-src/appscontroller/temp
+temp
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
